fixing hero btn not showing on mobils

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -60,7 +60,7 @@
   cursor: pointer;
   display: none;
   &:hover {
-    color: color('white');
+    color: color('ba');
   }
 
   &__link {
